merge data ex